fix: local host error

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "homepage": "https://mubashirkhan22.github.io/DatagainTask",
-  "name": "datagaintask",
-  "version": "0.1.0",
+  "homepage": "https://mubashirkhan22.github.io",
+    "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -19,6 +18,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
